# basedaccountant

./: .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc
app/: app.css  root.tsx
app/routes/: home.tsx
basedaccountant/: __init__.py  __main__.py  cli.py  mcp_server.py  search.py  server.py
basedaccountant/static/: index.html
