[project]
name = "basedaccountant"
version = "0.1.0"
description = "AI-powered accounting standards research. Instant cited answers from MFRS, MPERS, and ITA 1967."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "anthropic>=0.20",
    "click>=8.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4"]

[project.scripts]
basedaccountant = "basedaccountant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
